--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </header>
             <!-- div headline com o logo e o nome do negócio -->
             <div id="header">
-                <img src="_img/logo-entorno.png"/ alt="Logo"><h1>engobo cerâmica</h1>
+                <img src="_img/logo-entorno.png" alt="Logo"><h1>engobo cerâmica</h1>
             </div>
             <!-- div headline com chamada que resume o tipo de negócio -->
             <div id="headline">
