--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- CSS Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!--CSS-->
-    <link rel="stylesheet" href="./_css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -25,7 +25,7 @@
             </header>
             <!-- div headline com o logo e o nome do negócio -->
             <div id="header">
-                <img src="_img/logo-entorno.png" alt="Logo"><h1>engobo cerâmica</h1>
+                <img src="img/logo-entorno.png" alt="Logo"><h1>engobo cerâmica</h1>
             </div>
             <!-- div headline com chamada que resume o tipo de negócio -->
             <div id="headline">
@@ -70,8 +70,9 @@
         </section>
         <!-- Aside com imagem dos produtos -->
         <aside>
-            <img src="_img/foto-ceramica.jpg"/>
+            <img src="img/foto-ceramica.jpg"/>
         </aside>
     </div>
+    <script src="/js/script.js"></script>
 </body>
 </html>
