--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </header>
             <!-- div headline com o logo e o nome do negócio -->
             <div id="header">
-                <img src="img/logo-entorno.png" alt="Logo"><h1>engobo cerâmica</h1>
+                <img src="./img/logo-entorno.png" alt="Logo"><h1>engobo cerâmica</h1>
             </div>
             <!-- div headline com chamada que resume o tipo de negócio -->
             <div id="headline">
@@ -70,9 +70,9 @@
         </section>
         <!-- Aside com imagem dos produtos -->
         <aside>
-            <img src="img/foto-ceramica.jpg"/>
+            <img src="./img/foto-ceramica.jpg"/>
         </aside>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
